methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:7: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    while(!isFacingTrail()) {
                        ^SlugSnail:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^SlugSnail:22: warning: enclosing method isFacingTrail has result type Unit: return value discarded
    return false
    ^SlugSnail:27: error: not found: value isGroundColor
    if(isGroundColor == c) {
       ^SlugSnail:29: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SlugSnail:29: warning: enclosing method isFacingTrail has result type Unit: return value discarded
      return true
      ^SlugSnail:33: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SlugSnail:33: warning: enclosing method isFacingTrail has result type Unit: return value discarded
      return false
      ^